--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
   margin: 1em;
 }
 
-.example_a {
+.button {
   width: 160px;
   color: #fff;
   font-weight: bold;
@@ -50,7 +50,7 @@ body {
   transition: all 0.4s ease 0s;
 }
 
-.example_a:hover {
+.button:hover {
   background: #7e7e7e;
   /* background: #434343; */
   letter-spacing: 0.7px;
