--- a/css/navbar.css
+++ b/css/navbar.css
@@ -11,6 +11,10 @@
   z-index: 9999;
 }
 
+#js-navbar-toggle-hide {
+  display: none;
+}
+
 .main-nav {
   margin-top: 40px;
   list-style-type: none;
@@ -38,6 +42,7 @@
 #back-button {
   display: none;
   margin-left: 25px;
+  margin-right: 350px;
 }
 
 #back-button img {
@@ -46,7 +51,26 @@
   background-size: 30px;
 }
 
-.money-settings-toggle {
+#home-icon-div-hide {
+  display: none;
+  margin-left: 25px;
+  margin-right: 350px;
+}
+
+#home-icon-div-show {
+  float: right;
+  margin-top: 20px;
+  margin-right: 25px;
+  cursor: pointer;
+}
+
+#home-icon-div-show img {
+  height: 30px;
+  width: 30px;
+  background-size: 30px;
+}
+
+#money-settings-toggle {
   display: none;
 }
 
