--- a/css/navbar.css
+++ b/css/navbar.css
@@ -45,10 +45,11 @@
   margin-right: 350px;
 }
 
-#back-button img {
-  height: 30px;
+#back-button p {
+  color: #ffb600;
+  /* height: 30px;
   width: 30px;
-  background-size: 30px;
+  background-size: 30px; */
 }
 
 #home-icon-div-hide {
@@ -64,10 +65,11 @@
   cursor: pointer;
 }
 
-#home-icon-div-show img {
-  height: 30px;
+#home-icon-div-show p {
+  color: #ffb600;
+  /* height: 30px;
   width: 30px;
-  background-size: 30px;
+  background-size: 30px; */
 }
 
 #money-settings-toggle {
