--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,33 @@ body {
   margin: 1em;
 }
 
-.button {
+.camera-button {
+  width: 160px;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #ffb600;
+  padding: 20px;
+  border-radius: 5px;
+  display: inline-block;
+  opacity: 0.9;
+}
+
+.display-button {
+  width: 160px;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #ffb600;
+  padding: 20px;
+  border-radius: 5px;
+  display: inline-block;
+  opacity: 0.9;
+}
+
+.specialty-button {
   width: 160px;
   color: #fff;
   font-weight: bold;
