Working on clearing previous html from settings divs

--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ body {
   border-top-right-radius: 5px;
   height: auto;
   width: 80%;
-  margin: 0 auto;
+  margin: auto;
 }
 
 .settings-second-div {
