Added 'back' functionality and 'home' icon to the default settings navbar.

--- a/css/default.css
+++ b/css/default.css
@@ -57,6 +57,10 @@
 .default-specialty-title-text {
   color: #ffb600;
   margin-top: 120px;
+  margin-bottom: 12px;
+}
+.ccu-bread-crumbs-text {
+  color: #fff;
   margin-bottom: 24px;
 }
 
