--- a/css/navbar.css
+++ b/css/navbar.css
@@ -34,7 +34,7 @@
 .logo {
   display: inline-block;
   font-size: 22px;
-  margin-top: 10px;
+  margin-top: 12px;
   margin-left: 20px;
   padding-top: 10px;
 }
@@ -46,6 +46,7 @@
 }
 
 #back-button img {
+  margin-top: 10px;
   height: 30px;
   width: 30px;
   background-size: 30px;
@@ -59,12 +60,19 @@
 
 #home-icon-div-show {
   float: right;
-  margin-top: 20px;
-  margin-right: 25px;
+  margin: 20px 20px 6px 0px;
   cursor: pointer;
 }
 
+#home-icon-div-show p {
+  font-size: 12px;
+  color: #fff;
+  margin-top: 4px;
+}
+
 #home-icon-div-show img {
+  margin-left: 25px;
+  left: 20px;
   height: 30px;
   width: 30px;
   background-size: 30px;
