--- a/css/default.css
+++ b/css/default.css
@@ -49,12 +49,12 @@
 }
 
 /* /////////////////// Specialties */
-.default-specialty-title-div {
+#default-settings-title-div {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.default-specialty-title-text {
+.default-settings-title-text {
   color: #ffb600;
   margin-top: 120px;
   margin-bottom: 12px;
