--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,11 +1,11 @@
 /* NavBar Styling */
 .navbar {
   position: fixed;
+  min-height: 78px;
   width: 100%;
   font-size: 18px;
   background-color: #262626;
   border: 1px solid rgba(0, 0, 0, 0.2);
-  padding-bottom: 10px;
   opacity: 0.9;
   border-bottom: 5px solid #ffb600;
   z-index: 9999;
@@ -34,7 +34,7 @@
 .logo {
   display: inline-block;
   font-size: 22px;
-  margin-top: 12px;
+  margin-top: 16px;
   margin-left: 20px;
   padding-top: 10px;
 }
@@ -46,7 +46,6 @@
 }
 
 #back-button img {
-  margin-top: 10px;
   height: 30px;
   width: 30px;
   background-size: 30px;
@@ -60,19 +59,11 @@
 
 #home-icon-div-show {
   float: right;
-  margin: 20px 20px 6px 0px;
+  margin: 24px 26px 6px 0px;
   cursor: pointer;
 }
 
-#home-icon-div-show p {
-  font-size: 12px;
-  color: #fff;
-  margin-top: 4px;
-}
-
 #home-icon-div-show img {
-  margin-left: 25px;
-  left: 20px;
   height: 30px;
   width: 30px;
   background-size: 30px;
@@ -123,7 +114,7 @@
 }
 
 .container {
-  padding: 10px 15px 0;
+  padding: 16px 15px 0;
   float: right;
   display: inline-block;
   cursor: pointer;
