Fixed a bug that involved the money settings' back-button and the default settings back-button.

--- a/css/default.css
+++ b/css/default.css
@@ -137,7 +137,17 @@
   padding-bottom: 24px;
 }
 
-.default-parameters-div {
+#default-back-button {
+  display: none;
+  margin-left: 25px;
+  margin-right: 350px;
+  margin-top: 24px;
+}
+
+#default-back-button img {
+  height: 30px;
+  width: 30px;
+  background-size: 30px;
 }
 
 .default-parameter-div {
