--- a/css/printer.css
+++ b/css/printer.css
@@ -143,10 +143,29 @@ body {
 }
 
 .sdc-buttons-div {
-  margin: 1em;
+  margin: 16px;
 }
 
 .example_a {
+  width: 160px;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #ffb600;
+  padding: 20px;
+  border-radius: 5px;
+  display: inline-block;
+  opacity: 0.9;
+  transition: all 0.4s ease 0s;
+}
+
+.printer-specialty-buttons-div {
+  display: none;
+  margin: 16px;
+}
+
+.printer-example_a {
   width: 160px;
   color: #fff;
   font-weight: bold;
