--- a/css/printer.css
+++ b/css/printer.css
@@ -251,16 +251,31 @@ body {
   padding: 8px;
 }
 
+.hub-printer-settings-div {
+  width: 50%;
+}
+
+.hub-printer-parameter-div {
+  width: 48%;
+}
+
+.sdc-sdp1000-parameter-div {
+  width: 45%;
+}
+
+.sdc-sdp1000--settings-div {
+  width: 53%;
+}
+
 .printer-settings-div {
   display: flex;
 }
 
 .printer-parameters {
-  margin-left: 16px;
+  margin-left: 8px;
   margin-top: 8px;
   margin-bottom: 8px;
   border-bottom: 1px solid #262626;
-  width: 150px;
 }
 
 .printer-parameter {
@@ -268,10 +283,9 @@ body {
 }
 
 .printer-settings {
-  margin-left: 30px;
+  margin-left: 24px;
   margin-top: 8px;
   margin-bottom: 8px;
-  width: 150px;
   border-bottom: 1px solid #262626;
 }
 
@@ -292,11 +306,12 @@ body {
   #settings-div {
     font-size: 0.85em;
   }
-  .printer-parameters {
-    width: 100px;
+  .sdc-sdp1000-parameter-div {
+    width: 48%;
   }
-  .printer-settings {
-    width: 100px;
+
+  .sdc-sdp1000--settings-div {
+    width: 50%;
   }
 }
 @media (max-width: 361px) {
@@ -305,7 +320,17 @@ body {
   }
 }
 
-@media (min-width: 721px) {
+@media (max-width: 375px) {
+  .hub-printer-settings-div {
+    width: 50%;
+  }
+
+  .hub-printer-parameter-div {
+    width: 48%;
+  }
+}
+
+/* @media (min-width: 721px) {
   #settings-div {
     margin-left: 15%;
     align-items: center;
@@ -313,4 +338,4 @@ body {
     color: #262626;
     width: 70%;
   }
-}
+} */
