--- a/css/navbar.css
+++ b/css/navbar.css
@@ -82,6 +82,10 @@
   font-size: 24px;
 }
 
+.navbar-button a {
+  text-decoration: none;
+}
+
 .main-nav {
   list-style-type: none;
   display: none;
