--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,11 @@
   padding: 0;
   margin: 0;
   font-family: "Josefin Sans", sans-serif;
-  background-color: #262626;
+  /* background-color: #262626; */
+}
+
+body {
+  background: #262626;
 }
 
 .index-nav {
@@ -31,19 +35,78 @@
 .cards-container {
   max-width: 800px;
   height: auto;
-  background: lightgoldenrodyellow;
   margin: 10% auto;
 }
 
-.card-img-div {
-}
-
 .card-container {
+  display: flex;
+  flex-direction: column;
   width: 250px;
   height: 300px;
-  background: lightskyblue;
+  background: #ffb600;
+  border-radius: 10px;
+  /* padding: 8px; */
 }
 
+.card-container:hover {
+  cursor: pointer;
+  width: 255px;
+  height: 305px;
+  background: #ffb600;
+  transition: all 0.4s ease 0s;
+}
+
+.card-img-div {
+  width: 60px;
+  height: 60px;
+  background: transparent url("../images/msa-log.png") 0% 0% no-repeat
+    padding-box;
+  opacity: 1;
+  margin-top: 20px;
+  margin-left: 12px;
+  background-size: 60px;
+}
+
+.card-container:hover .card-img-div {
+  width: 65px;
+  height: 65px;
+  background-size: 65px;
+  transition: all 0.4s ease 0s;
+}
+
+.card-title-div {
+  margin-top: 34px;
+  margin-left: 12px;
+}
+
+.card-title-text {
+  font-size: 24px;
+  font-weight: 700;
+  color: #232323;
+}
+
+.card-container:hover .card-title-text {
+  letter-spacing: 0.7px;
+  transition: all 0.4s ease 0s;
+}
+
+.card-text-div {
+  margin-top: 14px;
+  margin-left: 12px;
+  padding-top: 8px;
+  padding-right: 8px;
+}
+
+.card-container:hover .card-text-text {
+  letter-spacing: 0.7px;
+  transition: all 0.4s ease 0s;
+}
+
+.card-text-text {
+  font-size: 18px;
+  font-weight: 200;
+  opacity: 0.7;
+}
 .msa-button {
   padding: 12px 8px;
   background: lightskyblue;
