--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,16 @@ body {
   opacity: 0.9;
 }
 
+.camera-button:hover {
+  background: #7e7e7e;
+  /* background: #434343; */
+  letter-spacing: 0.7px;
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+  -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+  box-shadow: 5px 40px -10px rgba(0, 0, 0, 0.57);
+  transition: all 0.4s ease 0s;
+}
+
 .display-button {
   width: 160px;
   color: #fff;
