--- a/css/index.css
+++ b/css/index.css
@@ -68,6 +68,24 @@ body {
   background-size: 60px;
 }
 
+#storz-card-img-div {
+  width: 60px;
+  height: 60px;
+  background: transparent url("../images/storz.png") 0% 0% no-repeat
+    padding-box;
+  opacity: 1;
+  margin-top: 20px;
+  margin-left: 12px;
+  background-size: 60px;
+}
+
+.card-container:hover #storz-card-img-div {
+  width: 65px;
+  height: 65px;
+  background-size: 65px;
+  transition: all 0.4s ease 0s;
+}
+
 #printer-card-img-div {
   width: 60px;
   height: 60px;
