--- a/css/default-settings.css
+++ b/css/default-settings.css
@@ -1,17 +1,64 @@
+.default-navbar {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    min-height: 78px;
+    width: 100%;
+    font-size: 18px;
+    background-color: #262626;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    opacity: 0.9;
+    border-bottom: 5px solid #ffb600;
+    z-index: 9999;
+}
+
 .default-home-icon {
     width: 40px;
     height: 40px;
-    margin-top: -28px;
-    margin-right: 16px;
     margin-left: auto;
+    margin-top: 24px;
+    margin-right: 24px;
     background: transparent url("../images/home.jpg") 0% 0% no-repeat
       padding-box;
     opacity: 1;
     background-size: 40px;
 }
 
+.default-logo {
+    text-decoration: none;
+  color: rgba(255, 255, 255, 0.7);
+    font-size: 22px;
+    padding-top: 10px;
+}
+
+.default-logo-div {
+    margin-top: 24px;
+    margin-left: 16px;
+}
+
+.default-logo-div.default-logo-center {
+   margin-left: 40%;
+  
+}
+
 .default-home-icon:hover {
     cursor: pointer;
+}
+
+.back-btn-div.back-btn-show {
+    width: 40px;
+    height: 40px;
+    margin-top: 16px;
+    margin-left: 24px;
+    background: transparent url("../images/arrow.jpg") 0% 0% no-repeat
+      padding-box;
+    opacity: 1;
+    background-size: 40px;
+}
+
+.back-btn-div.back-btn-show:hover {
+    cursor: pointer;
+   
 }
 
 .default-camera-buttons-div {
