--- a/css/default-settings.css
+++ b/css/default-settings.css
@@ -1,3 +1,7 @@
+.default-settings-container {
+    max-width: 500px;
+    margin: auto;
+}
 .default-navbar {
     position: fixed;
     display: flex;
@@ -26,9 +30,14 @@
 
 .default-logo {
     text-decoration: none;
-  color: rgba(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255, 0.7);
     font-size: 22px;
     padding-top: 10px;
+}
+
+.default-logo:hover{
+    color: #ffb600;
+    transition: all ease-in-out 0.4s;
 }
 
 .default-logo-div {
@@ -98,5 +107,46 @@
 
 .default-breadcrumbs-text {
     padding-left: 15px;
+    color: #fff;
+}
+
+.default-settings-div{
+    display: none;
+}
+
+.default-settings-div.default-settings-show{
+    display: block;
+}
+
+
+
+.default-settings-title-div {
+    position: relative;
+    top: 120px;
+    margin: auto;
+    text-align: center;
+    background: #ffb600;
+    border-radius: 10px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.default-settings-ccu-specialty-div{
+    display: flex;
+    justify-content: center;
+    color: #262626;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.default-settings-ccu-title {
+    margin-right: 8px;
+}
+
+.default-settings-subtitle-text{
+    margin-top: 6px;
+    font-size: 18px;
     color: #fff;
 }
