--- a/css/default-settings.css
+++ b/css/default-settings.css
@@ -17,15 +17,15 @@
 }
 
 .default-home-icon {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     margin-left: auto;
     margin-top: 24px;
     margin-right: 24px;
     background: transparent url("../images/home.jpg") 0% 0% no-repeat
       padding-box;
     opacity: 1;
-    background-size: 40px;
+    background-size: 30px;
 }
 
 .default-logo {
@@ -55,14 +55,14 @@
 }
 
 .back-btn-div.back-btn-show {
-    width: 40px;
-    height: 40px;
-    margin-top: 16px;
+    width: 30px;
+    height: 30px;
+    margin-top: 21px;
     margin-left: 24px;
     background: transparent url("../images/arrow.jpg") 0% 0% no-repeat
       padding-box;
     opacity: 1;
-    background-size: 40px;
+    background-size: 30px;
 }
 
 .back-btn-div.back-btn-show:hover {
@@ -197,3 +197,42 @@
     border-bottom: 1px solid #232323;
     color: #fff;
 }
+
+/* Media Queries*/
+@media (max-width: 414px) {
+    .default-settings-container {
+        max-width: 380px;
+    }
+    .default-logo-div.default-logo-center {
+        margin-left: 20%;
+       
+     }
+  }
+
+  @media (max-width: 375px) {
+    .default-settings-container {
+        max-width: 350px;
+    }
+    .default-logo-div.default-logo-center {
+       
+        margin-left: 20%;
+       
+     }
+     .back-btn-div.back-btn-show {
+       
+        margin-left: 20px;
+      
+    }
+    .default-home-icon {
+        margin-right: 15px;
+      
+    }
+
+    .default-param-div {
+        font-size: 14px;
+    }
+
+    .default-setting-div {
+        font-size: 14px;
+    }
+  }
