--- a/css/navbar.css
+++ b/css/navbar.css
@@ -52,7 +52,12 @@
 
 .money-settings-logo-div.msa-logo-center {
   margin-top: 24px;
-  margin-left: 578px;
+  margin-left: 595px;
+}
+
+.money-settings-logo-div a:hover {
+  color: #ffb600;
+  transition: all ease-in-out 0.4s;
 }
 
 .home-icon-div:hover {
@@ -82,7 +87,7 @@ cursor: pointer;
 
 .home-icon-div {
  margin-left: auto;
- margin-right: 16px;
+ margin-right: 24px;
  margin-top: 24px;
 }
 
@@ -150,4 +155,18 @@ cursor: pointer;
   float: right;
   display: inline-block;
   cursor: pointer;
+}
+
+@media (max-width: 375px) {
+  /* .money-settings-logo-div.msa-logo-center {
+    margin-top: 26px;
+    margin-left: 0px;
+  } */
+}
+
+@media (max-width: 414px) {
+  .money-settings-logo-div.msa-logo-center {
+    margin-top: 26px;
+    margin-left: 20%;
+  }
 }
