--- a/css/printer.css
+++ b/css/printer.css
@@ -7,33 +7,40 @@
 body {
   font-family: "Josefin Sans", sans-serif;
 }
-
-#printer-back-button {
-  display: none;
-  margin-left: 25px;
-  margin-right: 350px;
-  cursor: pointer;
+.navbar-backbtn-logo-home-div {
+  display: flex;
 }
 
-#printer-back-button img {
-  height: 30px;
+.home-icon-printer{
   width: 30px;
-  background-size: 30px;
-  margin-top: 25px;
-}
-
-#printer-home-icon-div-hide {
-  display: none;
-}
-
-#printer-home-icon-div-show img {
-  float: right;
   height: 30px;
-  width: 30px;
+  margin-left: auto;
+  margin-right: 16px;
+  margin-top: 24px;
+  background: transparent url("../images/home.jpg") 0% 0% no-repeat
+    padding-box;
+  opacity: 1;
   background-size: 30px;
-  margin-top: 25px;
-  margin-right: 25px;
-  cursor: pointer;
+}
+
+.printer-logo-div {
+  margin-top: 24px;
+  margin-left: 16px;
+}
+
+.printer-logo-div p {
+  font-size: 22px;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.printer-back-button.printer-back-button-show{
+  width: 30px;
+  height: 30px;
+  background: transparent url("../images/back-icon2.png") 0% 0% no-repeat
+    padding-box;
+  opacity: 1;
+  background-size: 30px;
 }
 
 #sdc-div {
