--- a/css/printer.css
+++ b/css/printer.css
@@ -19,6 +19,26 @@ body {
   display: none;
 }
 
+.hub-arthro-settings-div {
+  display: none;
+}
+
+.hub-spy-settings-div {
+  display: none;
+}
+
+.hub-spy-settings-div.hub-spy-settings-div-show{
+  display: block;
+}
+
+.hub-arthro-settings-div.hub-arthro-settings-div-show {
+  display: block;
+}
+
+.sdcs-div.sdcs-div-hide {
+  display: none;
+}
+
 .home-icon-printer{
   width: 30px;
   height: 30px;
@@ -32,8 +52,16 @@ body {
 }
 
 .printer-logo-div {
-  margin-top: 24px;
+  margin-top: 28px;
   margin-left: 16px;
+}
+
+.printer-logo-div.printer-logo-div-center {
+  margin-left: 20%;
+}
+
+.printer-logo-div:hover{
+  cursor: pointer;
 }
 
 .printer-logo-div p {
@@ -45,6 +73,8 @@ body {
 .printer-back-button.printer-back-button-show{
   width: 30px;
   height: 30px;
+  margin-top: 24px;
+  margin-left: 16px;
   background: transparent url("../images/back-icon2.png") 0% 0% no-repeat
     padding-box;
   opacity: 1;
@@ -185,6 +215,14 @@ body {
 
 .printer-specialty-buttons-div {
   margin: 16px;
+}
+
+.printer-specialty-div {
+  display: none;
+}
+
+.printer-specialty-div.top-printer-specialty-div-show {
+  display: block;
 }
 
 .printer-specialty-example_a {
