--- a/css/index.css
+++ b/css/index.css
@@ -68,10 +68,10 @@ body {
   background-size: 60px;
 }
 
-#storz-card-img-div {
+#olympus-card-img-div {
   width: 60px;
-  height: 60px;
-  background: transparent url("../images/storz.png") 0% 0% no-repeat
+  min-height: 60px;
+  background: transparent url("../images/olympus.png") 0% 0% no-repeat
     padding-box;
   opacity: 1;
   margin-top: 20px;
@@ -79,9 +79,9 @@ body {
   background-size: 60px;
 }
 
-.card-container:hover #storz-card-img-div {
+.card-container:hover #olympus-card-img-div {
   width: 65px;
-  height: 65px;
+  min-height: 63px;
   background-size: 65px;
   transition: all 0.4s ease 0s;
 }
