--- a/css/olympus.css
+++ b/css/olympus.css
@@ -146,6 +146,8 @@
     padding-top: 16px;
     padding-bottom: 16px;
     background: #ffb600;
+    /* color: rgba(255, 255, 255, 0.7); */
+    color: #232323;
     border-radius: 10px;
     margin-top: 16px;
     text-align: center;
@@ -162,6 +164,13 @@
 
 .olympus-btn-div-hide {
     display: none;
+}
+
+.olympus-settings-container.olympus-settings-container-show {
+    width: 80%;
+    height: 100vh;
+    margin: auto;
+    background: lightskyblue;
 }
 
 
