--- a/css/olympus.css
+++ b/css/olympus.css
@@ -92,19 +92,38 @@
 
 
 .olympus-title-div {
-    width: 90%;
-    height: height;
+    width: 80%;
     margin:  0 auto;
+    margin-bottom: 16px;
     padding: 16px;
-    /* background: #ffb600; */
+    background: #ffb600;
     border-radius: 10px;
 
 }
 
+.olympus-monitor-title-div {
+    display: none;
+}
+
+.olympus-monitor-title-div.olympus-monitor-title-div-show {
+    display: block;
+    width: 80%;
+    margin:  0 auto;
+    margin-bottom: 16px;
+    padding: 16px;
+    background: #ffb600;
+    border-radius: 10px; 
+}
+
+.olympus-monitor-title-div {
+    color: #262626;
+    font-size: 24px;
+    font-weight: 900;
+}
+
 
 .olympus-title-text {
-    /* color: #262626; */
-    color: rgba(255, 255, 255, 0.7);
+    color: #262626;
     font-size: 24px;
     font-weight: 900;
 }
@@ -113,23 +132,47 @@
     padding-bottom: 8px;
 }
 
+.olympus-monitor-ccu-monitor-title-div {
+    display: flex;
+    padding-bottom: 8px;
+}
+
 .olympus-specialty-title-span {
     margin-left: 8px;
-    /* color: #262626; */
-    color: rgba(255, 255, 255, 0.7);
+    color: #262626;
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.olympus-monitor-specialty-title-span {
+    margin-left: 8px;
+    color: #262626;
     font-size: 24px;
     font-weight: 900;
 }
 
 .olympus-title-text-span-div {
     display: flex;
-    margin: auto;
+    margin: auto;    
+}
+
+.olympus-monitor-title-text-span-div{
+    display: flex;
+    margin: auto; 
     
 }
 
 .olympus-text-div {
     text-align: center;
-    color: rgba(255, 255, 255, 0.7);
+    font-size: 18px;
+    color: #fff;
+}
+
+.olympus-monitor-text-div {
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+    color: #fff;
 }
 
 .olympus-select-specialty-div {
@@ -167,10 +210,51 @@
 }
 
 .olympus-settings-container.olympus-settings-container-show {
+    display: flex;
     width: 80%;
-    height: 100vh;
+    height: auto;
+    min-height: 50vh;
     margin: auto;
-    background: lightskyblue;
+    margin-bottom: 16px;
+}
+
+.olympus-monitor-settings-container.olympus-monitor-settings-container-show {
+    display: flex;
+    width: 80%;
+    height: 50vh;
+    margin: auto; 
+}
+
+.olympus-monitor-params-div {
+    width: 50%;
+    height: 100%;
+    background: #ffb600;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.olympus-monitor-settings-div {
+    width: 50%;
+    height: 100%;
+    background: #ffb600;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.olympus-params-div {
+    width: 50%;
+    height: 100%;
+    background: #ffb600;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.olympus-settings-div {
+    width: 50%;
+    height: 100%;
+    background: #ffb600;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 
