--- a/css/olympus.css
+++ b/css/olympus.css
@@ -218,24 +218,47 @@
     margin-bottom: 16px;
 }
 
+.olympus-settings-container {
+    display: none;
+}
+
 .olympus-monitor-settings-container.olympus-monitor-settings-container-show {
     display: flex;
     width: 80%;
-    height: 50vh;
     margin: auto; 
 }
 
 .olympus-monitor-params-div {
     width: 50%;
-    height: 100%;
+    height: auto;
     background: #ffb600;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
+    padding-bottom: 16px;
+}
+
+
+
+.olympus-monitor-param-div {
+    text-align: left;
+    margin-left: 8px;
+    width: 90%;
+    padding: 16px 0 8px 8px;
+    border-bottom: 1px solid #232323;
+    color: #fff;
+}
+.olympus-monitor-setting-div {
+    text-align: left;
+    margin-left: 8px;
+    width: 90%;
+    padding: 16px 0 8px 8px;
+    border-bottom: 1px solid #232323;
+    color: #fff;
 }
 
 .olympus-monitor-settings-div {
     width: 50%;
-    height: 100%;
+    height: auto;
     background: #ffb600;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -247,6 +270,7 @@
     background: #ffb600;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
+    padding-bottom: 16px;
 }
 
 .olympus-settings-div {
@@ -255,6 +279,27 @@
     background: #ffb600;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
+    padding-bottom: 16px;
+}
+
+
+
+.olympus-param-div {
+    text-align: left;
+    margin-left: 8px;
+    width: 90%;
+    padding: 16px 0 8px 8px;
+    border-bottom: 1px solid #232323;
+    color: #fff;
+}
+
+.olympus-setting-div {
+    text-align: left;
+    margin-left: 8px;
+    width: 90%;
+    padding: 16px 0 8px 8px;
+    border-bottom: 1px solid #232323;
+    color: #fff;
 }
 
 
