Add small correction on the monitor params div.

--- a/css/olympus.css
+++ b/css/olympus.css
@@ -228,6 +228,10 @@
     margin: auto; 
 }
 
+.olympus-monitor-settings-container {
+    display: none;
+}
+
 .olympus-monitor-params-div {
     width: 50%;
     height: auto;
